logs/spinnman.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SpiNNMachine-1!4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/SpiNNMan-1!4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/SpiNNStorageHandlers-1!4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/SpiNNUtilities-1!4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spinn_machine'...
Listing './lib/python3.5/site-packages/spinn_machine/link_data_objects'...
Listing './lib/python3.5/site-packages/spinn_machine/tags'...
Listing './lib/python3.5/site-packages/spinn_machine/utilities'...
Listing './lib/python3.5/site-packages/spinn_storage_handlers'...
Listing './lib/python3.5/site-packages/spinn_storage_handlers/abstract_classes'...
Listing './lib/python3.5/site-packages/spinn_utilities'...
Compiling './lib/python3.5/site-packages/spinn_utilities/conf_loader.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/conf_loader.py", line 68
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spinn_utilities/configs'...
Compiling './lib/python3.5/site-packages/spinn_utilities/helpful_functions.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/helpful_functions.py", line 20
    return dict(map(lambda (name, router): (terminator.sub('', name), router),
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spinn_utilities/package_loader.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/package_loader.py", line 25
    print "Deleting: " + full_path
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spinn_utilities/testing'...
Compiling './lib/python3.5/site-packages/spinn_utilities/testing/log_checker.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/testing/log_checker.py", line 7
    print record
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spinnman'...
Listing './lib/python3.5/site-packages/spinnman/connections'...
Listing './lib/python3.5/site-packages/spinnman/connections/abstract_classes'...
Listing './lib/python3.5/site-packages/spinnman/connections/udp_packet_connections'...
Listing './lib/python3.5/site-packages/spinnman/messages'...
Listing './lib/python3.5/site-packages/spinnman/messages/eieio'...
Listing './lib/python3.5/site-packages/spinnman/messages/eieio/abstract_messages'...
Listing './lib/python3.5/site-packages/spinnman/messages/eieio/command_messages'...
Listing './lib/python3.5/site-packages/spinnman/messages/eieio/data_messages'...
Listing './lib/python3.5/site-packages/spinnman/messages/scp'...
Listing './lib/python3.5/site-packages/spinnman/messages/scp/abstract_messages'...
Listing './lib/python3.5/site-packages/spinnman/messages/scp/enums'...
Listing './lib/python3.5/site-packages/spinnman/messages/scp/impl'...
Listing './lib/python3.5/site-packages/spinnman/messages/sdp'...
Listing './lib/python3.5/site-packages/spinnman/messages/spinnaker_boot'...
Listing './lib/python3.5/site-packages/spinnman/messages/spinnaker_boot/boot_data'...
Listing './lib/python3.5/site-packages/spinnman/model'...
Listing './lib/python3.5/site-packages/spinnman/model/enums'...
Listing './lib/python3.5/site-packages/spinnman/model_binaries'...
Listing './lib/python3.5/site-packages/spinnman/processes'...
Compiling './lib/python3.5/site-packages/spinnman/processes/abstract_process.py'...
***   File "./lib/python3.5/site-packages/spinnman/processes/abstract_process.py", line 40
    raise self._exception, None, self._traceback
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spinnman/utilities'...
Compiling './lib/python3.5/site-packages/spinnman/utilities/locate_connected_machine_ip_address.py'...
***   File "./lib/python3.5/site-packages/spinnman/utilities/locate_connected_machine_ip_address.py", line 38
    print ip_address, "({})".format(
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
